staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ilhaeng-staging
  namespace: staging
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: ilhaeng-staging
  template:
    metadata:
      labels:
        app: ilhaeng-staging
    spec:
      containers:
        - name: ilhaeng
          image: leosunghojung/ilhaeng:be02ca0
          ports:
            - containerPort: 8080
