staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ilhaeng-staging-service
  namespace: staging
spec:
  selector:
    app: ilhaeng-staging
  ports:
    - port: 80
      targetPort: 8080
